--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
   "author": "Koosi Team",
   "license": "MIT",
   "dependencies": {
+    "@octokit/rest": "^22.0.0",
     "@prisma/client": "^6.12.0",
     "@types/ms": "^2.1.0",
     "bcrypt": "^6.0.0",
@@ -32,6 +33,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
+    "google-auth-library": "^10.2.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "ms": "^2.1.3",
@@ -40,7 +42,8 @@
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "zod": "^4.0.10"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
