--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
     "@fontsource/roboto": "^5.2.6",
     "@heroicons/react": "^2.2.0",
     "@popperjs/core": "^2.11.8",
+    "@react-oauth/google": "^0.12.2",
     "@react-three/drei": "^10.5.1",
     "@react-three/fiber": "^9.2.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/axios": "^0.9.36",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/three": "^0.178.1",
+    "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
