--- a/backend/package.json
+++ b/backend/package.json
@@ -26,8 +26,10 @@
   "dependencies": {
     "@octokit/rest": "^22.0.0",
     "@prisma/client": "^6.12.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/ms": "^2.1.0",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "dotenv": "^17.2.1",
