feat: Add smart contracts, FireFly config, and token-gated access control
- Add KoosiToken (ERC1155) and KoosiBridge contracts
- Configure FireFly for local development
- Implement token-gated access control system
- Add authentication and error handling middleware
- Update Prisma schema for blockchain addresses

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,21 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules
 /.pnp
 .pnp.js
 
-# testing
-/coverage
+# Hardhat
+cache/
+artifacts/
+typechain-types/
 
-# production
-/build
+# FireFly
+firefly/firefly-core/
+firefly/data/
 
+# Environment
+.env
 # misc
 .DS_Store
 .env.local
