--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@fontsource/inter": "^5.2.6",
     "@fontsource/roboto": "^5.2.6",
     "@heroicons/react": "^2.2.0",
+    "@hyperledger/firefly-sdk": "^1.3.3",
     "@popperjs/core": "^2.11.8",
+    "@prisma/client": "^6.12.0",
     "@react-oauth/google": "^0.12.2",
     "@react-three/drei": "^10.5.1",
     "@react-three/fiber": "^9.2.0",
@@ -15,14 +17,20 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/axios": "^0.9.36",
+    "@types/express": "^4.17.23",
     "@types/jest": "^27.5.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/three": "^0.178.1",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
+    "ethers": "^5.7.2",
     "framer-motion": "^12.23.6",
+    "ganache": "^7.9.2",
+    "jsonwebtoken": "^9.0.2",
+    "lucid-cardano": "^0.10.11",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
