--- a/contracts/ethereum/package.json
+++ b/contracts/ethereum/package.json
@@ -9,21 +9,32 @@
     "deploy:localhost": "hardhat run scripts/deploy.ts --network localhost"
   },
   "devDependencies": {
+    "@ethersproject/bytes": "^5.8.0",
+    "@ethersproject/strings": "^5.8.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.1.0",
     "@nomicfoundation/hardhat-ethers": "^3.0.0",
-    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.1.0",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-etherscan": "^3.1.8",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@openzeppelin/contracts": "^4.9.5",
+    "@typechain/ethers-v5": "^10.2.1",
     "@typechain/ethers-v6": "^0.5.0",
+    "@typechain/hardhat": "^9.1.0",
     "@types/chai": "^4.3.11",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.11.5",
-    "chai": "^4.4.1",
+    "chai": "^4.5.0",
     "dotenv": "^16.3.1",
-    "hardhat": "^2.19.4",
+    "ethereum-waffle": "^4.0.10",
+    "ethers": "^5.7.2",
+    "hardhat": "^2.26.1",
+    "hardhat-gas-reporter": "^1.0.10",
+    "solidity-coverage": "^0.8.16",
     "ts-node": "^10.9.2",
+    "typechain": "^8.3.2",
     "typescript": "^5.3.3"
-  },
-  "dependencies": {
-    "ethers": "^5.7.2"
   }
 }
