--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
+    "setup": "ts-node src/scripts/setupKoosi.ts",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write 'src/**/*.ts'"
   },
@@ -61,6 +62,7 @@
     "@types/passport-github2": "^1.2.9",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/supertest": "^6.0.3",
+    "@types/uuid": "^10.0.0",
     "jest": "^30.0.5",
     "prisma": "^6.12.0",
     "supertest": "^7.1.4",
